--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,10 +8,19 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.6.1",
     "axios": "^1.4.0",
+    "firebase": "^9.22.2",
+    "formik": "^2.4.2",
+    "i18next": "^23.1.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.0",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.9",
+    "uuid": "^9.0.0",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
